--- a/index.html
+++ b/index.html
@@ -12,10 +12,26 @@
 		<div class="header">
 			<!--<div class="mid_header clear-fix">
 				<ul>
-					<li><a href=""></a></li>
-					<li><a href=""></a></li>
-					<li><a href=""></a></li>
-					<li><a href=""></a></li>
+					<li class="vom">
+						<li><a href="">
+								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Placeat ullam, repellendus voluptas maiores facilis eum ea, debitis ex odit vel optio consectetur, id saepe dolor asperiores rerum omnis? Sequi, nam.</p>
+							</a></li>
+						<li><a href="">
+								<p>Facilis nemo assumenda voluptate blanditiis qui quas aspernatur, esse excepturi! Doloremque excepturi animi consequuntur vel quis hic, iusto ex error veniam sed minus natus? Quasi molestias sint corrupti, blanditiis doloremque.</p>
+							</a></li>
+						<li><a href="">
+								<p>Iste itaque, voluptas id, nisi officia sapiente consequatur quos, explicabo asperiores tenetur, aliquam natus quia veritatis sunt laboriosam aperiam ipsum. Quo nemo quidem, assumenda libero repellat itaque, quibusdam a dolores.</p>
+							</a></li>
+						<li><a href="">
+								<p>Cupiditate animi ducimus, ea minima. Autem saepe doloremque illo provident pariatur nam eius deleniti nisi nobis? Nesciunt sed hic, illum nam ex voluptas voluptatem perferendis assumenda iste quasi asperiores dolorum!</p>
+							</a></li>
+						<li><a href="">
+								<p>Eum et deleniti illo tempora suscipit accusamus, dolor quam consectetur, in sed reiciendis perferendis tenetur dolorem eaque debitis, cupiditate. Sapiente explicabo placeat commodi, sit blanditiis, suscipit dolores inventore perspiciatis assumenda?</p>
+							</a></li>
+						<li><a href="">
+								<p>Non magni, reprehenderit mollitia, laborum laboriosam odit. Eligendi laboriosam quas ipsum cupiditate dolorum repellendus sint minus fugit blanditiis perferendis impedit neque ex facere maiores tempora autem suscipit magni, qui, voluptatem.</p>
+							</a></li>
+						
 				</ul>
 			</div>-->
 		</div>
@@ -23,7 +39,15 @@
 		<div class="description_main">
 			<ul class="mid_menu clear-fix">
 				<li class="logo"><a href="/"></a></li>
-				<li class="portfolio"><a  href=""></a></li>
+				<li class="portfolio">
+					<li><a href="">
+								<p>Possimus quia at dolorum quae voluptatibus repellendus doloremque quaerat quis quo, rerum veniam sint fugiat nam assumenda placeat aliquid aspernatur dignissimos nihil temporibus animi cumque perferendis quasi. Assumenda, sint sequi?</p>
+							</a></li>
+						<li><a href="">
+								<p>Fugiat explicabo cum saepe, quia, quae ex nobis aliquam, esse, alias quis possimus perferendis quo eligendi ipsum illo in rem. Quasi sit accusamus ab inventore eius. Quo cupiditate, impedit sapiente!</p>
+							</a></li>
+					</li>
+				<a  href=""></a></li>
 				<li><a href=""></a></li>
 				<li><a href="price.html"></a></li>
 				<li><a href=""></a></li>
