--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 		<div class="content">
 		<div class="description_main">
 			<ul class="mid_menu clear-fix">
-				<li class="logo"><a href="/"></a></li>
+				<li class="logo"><a href="/">dick</a></li>
 				<li class="portfolio">
 					<li><a href="">
 								<p>Possimus quia at dolorum quae voluptatibus repellendus doloremque quaerat quis quo, rerum veniam sint fugiat nam assumenda placeat aliquid aspernatur dignissimos nihil temporibus animi cumque perferendis quasi. Assumenda, sint sequi?</p>
