оптимизация загрузки, перевод bg в css

--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 </head>
 <body>
 	<div class="wrapper">
+	<div class="bg"></div>
 		<div class="center_block">
+			<a class="lk" href=""></a>
 			<a class="logo" href=""></a>
 			<ul class="clear-fix">
 				<li class="works"><a  href=""><div></div></a></li>
