--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<title>Document</title>
 	<link rel="stylesheet" type="text/css" href="css/reset.min.css">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
+	<link rel="stylesheet" type="text/css" href="fonts/Anonym/anonym.css">
 </head>
 <body>
 	<div class="wrapper">
@@ -18,6 +19,7 @@
 				<li class="contacts"><a  href=""><div></div></a></li>
 			</ul>
 		</div>
+		<div class="footer"></div>
 	</div>
 </body>
 </html>
