--- a/SiteCore4/patriot.html
+++ b/SiteCore4/patriot.html
@@ -3,9 +3,10 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Document</title>
-	<bgsound src="anthem-choir.mp3">
+	
 </head>
 <body>
+<audio src="anthem-choir.mp3" autoplay></audio>
 <style>
 html, body{height:100%;padding:0;margin:0;}
 .header{margin-bottom:-200px;height:200px;background-color:white;position:relative}
