--- a/SiteCore4/patriot.html
+++ b/SiteCore4/patriot.html
@@ -6,7 +6,7 @@
 	
 </head>
 <body>
-<audio src="anthem-choir.mp3" autoplay></audio>
+<audio src="anthem-choir.mp3" preload autoplay></audio>
 <style>
 html, body{height:100%;padding:0;margin:0;}
 .header{margin-bottom:-200px;height:200px;background-color:white;position:relative}
