--- a/SiteCore4/portfolio.html
+++ b/SiteCore4/portfolio.html
@@ -13,8 +13,13 @@
 	<link rel="stylesheet" type="text/css" href="css/slideInRight.css">
 	<link rel="stylesheet" type="text/css" href="css/slideInUp.css">
 	<link rel="stylesheet" type="text/css" href="css/fadeIn.css">
+	<script type="text/javascript" src="js/jquery-1.11.1.min.js"></script>
+	<script type="text/javascript" src="js/jquery-ui.min.js"></script>
+	<link rel="stylesheet" type="text/css" href="Fonts/Barkentina/barkentina.css">
 </head>
 <body>
+
+<script type="text/javascript" src="js/hover.js"></script>
 
 <div class="wrapper animated fadeIn">
 	<div class="header">
@@ -29,14 +34,94 @@
 	</div>
 	<div class="content">
 		<ul class="portfolio_block">
-			<li><div class="shadow"></div><div><div class="top_left_bort"></div><h2>Cam-Net</h2><p>Сайт систем видео наблюдения.</p><div class="clear-fix"><a class="link" href=""></a><a class="look" href=""></a></div><div class="bottom_right_bort"></div></div></li><!--
-			--><li><div class="shadow"></div><div><div class="top_left_bort"></div><h2>Cam-Net</h2><p>Сайт систем видео наблюдения.</p><div class="clear-fix"><a class="link" href=""></a><a class="look" href=""></a></div><div class="bottom_right_bort"></div></div></li><!--
-			--><li><div class="shadow"></div><div><div class="top_left_bort"></div><h2>Cam-Net</h2><p>Сайт систем видео наблюдения.</p><div class="clear-fix"><a class="link" href=""></a><a class="look" href=""></a></div><div class="bottom_right_bort"></div></div></li><!--
-			--><li><div class="shadow"></div><div><div class="top_left_bort"></div><h2>Cam-Net</h2><p>Сайт систем видео наблюдения.</p><div class="clear-fix"><a class="link" href=""></a><a class="look" href=""></a></div><div class="bottom_right_bort"></div></div></li><!--
-			--><li><div class="shadow"></div><div><div class="top_left_bort"></div><h2>Cam-Net</h2><p>Сайт систем видео наблюдения.</p><div class="clear-fix"><a class="link" href=""></a><a class="look" href=""></a></div><div class="bottom_right_bort"></div></div></li><!--
-			--><li><div class="shadow"></div><div><div class="top_left_bort"></div><h2>Cam-Net</h2><p>Сайт систем видео наблюдения.</p><div class="clear-fix"><a class="link" href=""></a><a class="look" href=""></a></div><div class="bottom_right_bort"></div></div></li><!--
-			--><li><div class="shadow"></div><div><div class="top_left_bort"></div><h2>Cam-Net</h2><p>Сайт систем видео наблюдения.</p><div class="clear-fix"><a class="link" href=""></a><a class="look" href=""></a></div><div class="bottom_right_bort"></div></div></li><!--
-			--><li><div class="shadow"></div><div><div class="top_left_bort"></div><h2>Cam-Net</h2><p>Сайт систем видео наблюдения.</p><div class="clear-fix"><a class="link" href=""></a><a class="look" href=""></a></div><div class="bottom_right_bort"></div></div></li>
+			<div class="slide">
+	<div class="inner">
+		<div>
+			<div class="top_left_bort"></div>
+			<h2>Cam-Net</h2>
+			<p>Сайт систем видео наблюдения.</p>
+			<div class="clear-fix"><a class="link" href=""></a><a class="look" href=""></a></div>
+			<div class="bottom_right_bort"></div>
+		</div>
+	</div>
+</div><!--
+			--><div class="slide">
+	<div class="inner">
+		<div>
+			<div class="top_left_bort"></div>
+			<h2>Cam-Net</h2>
+			<p>Сайт систем видео наблюдения.</p>
+			<div class="clear-fix"><a class="link" href=""></a><a class="look" href=""></a></div>
+			<div class="bottom_right_bort"></div>
+		</div>
+	</div>
+</div><!--
+			--><div class="slide">
+	<div class="inner">
+		<div>
+			<div class="top_left_bort"></div>
+			<h2>Cam-Net</h2>
+			<p>Сайт систем видео наблюдения.</p>
+			<div class="clear-fix"><a class="link" href=""></a><a class="look" href=""></a></div>
+			<div class="bottom_right_bort"></div>
+		</div>
+	</div>
+</div><!--
+			--><div class="slide">
+	<div class="inner">
+		<div>
+			<div class="top_left_bort"></div>
+			<h2>Cam-Net</h2>
+			<p>Сайт систем видео наблюдения.</p>
+			<div class="clear-fix"><a class="link" href=""></a><a class="look" href=""></a></div>
+			<div class="bottom_right_bort"></div>
+		</div>
+	</div>
+</div><!--
+			--><div class="slide">
+	<div class="inner">
+		<div>
+			<div class="top_left_bort"></div>
+			<h2>Cam-Net</h2>
+			<p>Сайт систем видео наблюдения.</p>
+			<div class="clear-fix"><a class="link" href=""></a><a class="look" href=""></a></div>
+			<div class="bottom_right_bort"></div>
+		</div>
+	</div>
+</div><!--
+			--><div class="slide">
+	<div class="inner">
+		<div>
+			<div class="top_left_bort"></div>
+			<h2>Cam-Net</h2>
+			<p>Сайт систем видео наблюдения.</p>
+			<div class="clear-fix"><a class="link" href=""></a><a class="look" href=""></a></div>
+			<div class="bottom_right_bort"></div>
+		</div>
+	</div>
+</div><!--
+			--><div class="slide">
+	<div class="inner">
+		<div>
+			<div class="top_left_bort"></div>
+			<h2>Cam-Net</h2>
+			<p>Сайт систем видео наблюдения.</p>
+			<div class="clear-fix"><a class="link" href=""></a><a class="look" href=""></a></div>
+			<div class="bottom_right_bort"></div>
+		</div>
+	</div>
+</div><!--
+			--><div class="slide">
+	<div class="inner">
+		<div>
+			<div class="top_left_bort"></div>
+			<h2>Cam-Net</h2>
+			<p>Сайт систем видео наблюдения.</p>
+			<div class="clear-fix"><a class="link" href=""></a><a class="look" href=""></a></div>
+			<div class="bottom_right_bort"></div>
+		</div>
+	</div>
+</div>
 		</ul>
 	</div>
 </div>
