--- a/SiteCore4/patriot.html
+++ b/SiteCore4/patriot.html
@@ -14,7 +14,7 @@ html, body{height:100%;padding:0;margin:0;}
 .footer{margin-top:-200px;height:200px;background-color:red}
 </style>
 <div class="header"></div>
-<div class="content"><img height="100%" src="img/bg1.png"></div>
+<div class="content"><img height="100%" src="img/bg1.gif"></div>
 <div class="footer"></div>
 	
 </body>
