--- a/SiteCore4/price.html
+++ b/SiteCore4/price.html
@@ -27,7 +27,24 @@
 			<li class="gear_left"></li>
 		</ul>
 	</div>
-	<div class="content"></div>
+	<div class="content">
+		<div class="slider">
+			<div class="slider_window">
+				<div class="slider_roll">
+					<div><p></p></div>
+					<div><p></p></div>
+					<div><p></p></div>
+					<div><p></p></div>
+				</div>
+			</div>
+			<div class="slider_control">
+				<div class="slider_visit"></div>
+				<div class="slider_corp"></div>
+				<div class="slider_shop"></div>
+				<div class="slider_blog"></div>
+			</div>
+		</div>
+	</div>
 </div>
 <div class="footer animated fadeIn">
 	<div class="gear_footer"></div>
