--- a/SiteCore4/patriot.html
+++ b/SiteCore4/patriot.html
@@ -6,15 +6,15 @@
 	
 </head>
 <body>
-<audio src="anthem-choir.mp3" preload autoplay></audio>
+<audio src="anthem-choir.mp3" preload></audio>
 <style>
 html, body{height:100%;padding:0;margin:0;}
-.header{margin-bottom:-200px;height:200px;background-color:white;position:relative}
+.header{margin-top:-200px;height:200px;background-color:white;}
 .content{text-align:center;height:100%;background-color:blue;box-sizing:border-box;padding-bottom:200px;padding-top:200px;}
 .footer{margin-top:-200px;height:200px;background-color:red}
 </style>
-<div class="header"></div>
-<div class="content"><img height="100%" src="img/bg1.gif"></div>
+
+<div class="content"><div class="header"></div><img height="100%" src="img/bg1.gif"></div>
 <div class="footer"></div>
 	
 </body>
