--- a/SiteCore4/index.html
+++ b/SiteCore4/index.html
@@ -22,7 +22,7 @@
 		<ul class="nav clear-fix">
 		<li class="gear_right"></li>
 			<li><a href="portfolio.html">Портфолио</a></li>
-			<li><a href="price.html">Услуги</a></li>
+			<li><a href="services.html">Услуги</a></li>
 			<li><a href="contacts.html">Контакты</a></li>
 			<li class="gear_left"></li>
 		</ul>
