--- a/SiteCore4/portfolio.html
+++ b/SiteCore4/portfolio.html
@@ -27,15 +27,15 @@
 		<ul class="nav clear-fix">
 		<li class="gear_right"></li>
 			<li><a href="portfolio.html">Портфолио</a></li>
-			<li><a href="price.html">Услуги</a></li>
+			<li><a href="services.html">Услуги</a></li>
 			<li><a href="contacts.html">Контакты</a></li>
 			<li class="gear_left"></li>
 		</ul>
 	</div>
 	<div class="content">
 		<ul class="portfolio_block">
-			<div class="slide">
-	<div class="inner">
+			<div class="thumbnail">
+	<div class="description">
 		<div>
 			<div class="top_left_bort"></div>
 			<h2>Cam-Net</h2>
@@ -45,8 +45,8 @@
 		</div>
 	</div>
 </div><!--
-			--><div class="slide">
-	<div class="inner">
+			--><div class="thumbnail">
+	<div class="description">
 		<div>
 			<div class="top_left_bort"></div>
 			<h2>Cam-Net</h2>
@@ -56,8 +56,8 @@
 		</div>
 	</div>
 </div><!--
-			--><div class="slide">
-	<div class="inner">
+			--><div class="thumbnail">
+	<div class="description">
 		<div>
 			<div class="top_left_bort"></div>
 			<h2>Cam-Net</h2>
@@ -67,8 +67,8 @@
 		</div>
 	</div>
 </div><!--
-			--><div class="slide">
-	<div class="inner">
+			--><div class="thumbnail">
+	<div class="description">
 		<div>
 			<div class="top_left_bort"></div>
 			<h2>Cam-Net</h2>
@@ -78,8 +78,8 @@
 		</div>
 	</div>
 </div><!--
-			--><div class="slide">
-	<div class="inner">
+			--><div class="thumbnail">
+	<div class="description">
 		<div>
 			<div class="top_left_bort"></div>
 			<h2>Cam-Net</h2>
@@ -89,8 +89,8 @@
 		</div>
 	</div>
 </div><!--
-			--><div class="slide">
-	<div class="inner">
+			--><div class="thumbnail">
+	<div class="description">
 		<div>
 			<div class="top_left_bort"></div>
 			<h2>Cam-Net</h2>
@@ -100,8 +100,8 @@
 		</div>
 	</div>
 </div><!--
-			--><div class="slide">
-	<div class="inner">
+			--><div class="thumbnail">
+	<div class="description">
 		<div>
 			<div class="top_left_bort"></div>
 			<h2>Cam-Net</h2>
@@ -111,8 +111,8 @@
 		</div>
 	</div>
 </div><!--
-			--><div class="slide">
-	<div class="inner">
+			--><div class="thumbnail">
+	<div class="description">
 		<div>
 			<div class="top_left_bort"></div>
 			<h2>Cam-Net</h2>
