--- a/SiteCore4/contacts.html
+++ b/SiteCore4/contacts.html
@@ -23,7 +23,7 @@
 		<ul class="nav clear-fix">
 		<li class="gear_right"></li>
 			<li><a href="portfolio.html">Портфолио</a></li>
-			<li><a href="price.html">Услуги</a></li>
+			<li><a href="services.html">Услуги</a></li>
 			<li><a href="">Контакты</a></li>
 			<li class="gear_left"></li>
 		</ul>
