добавление раздела услуг

--- a/SiteCore4/index.html
+++ b/SiteCore4/index.html
@@ -30,7 +30,7 @@
 	<div class="content">
 	<div class="bg_main"></div>
 	<h1>Студия вебдизайна</h1>
-	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dignissimos excepturi tempore iste, iusto sed sit delectus ratione laudantium</p>
+	<div class="hi-scriptor"><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dignissimos excepturi tempore iste, iusto sed sit delectus ratione laudantium</p></div>
 	</div>
 </div>
 <div class="footer animated fadeIn">
