--- a/SiteCore4/price.html
+++ b/SiteCore4/price.html
@@ -27,21 +27,50 @@
 			<li class="gear_left"></li>
 		</ul>
 	</div>
-	<div class="content">
+	<div class="content clear-fix">
 		<div class="slider">
+
 			<div class="slider_window">
+
 				<div class="slider_roll">
 					<div><p></p></div>
 					<div><p></p></div>
 					<div><p></p></div>
 					<div><p></p></div>
 				</div>
+
 			</div>
-			<div class="slider_control">
-				<div class="slider_visit"></div>
-				<div class="slider_corp"></div>
-				<div class="slider_shop"></div>
-				<div class="slider_blog"></div>
+			<div class="slider_control clear-fix">
+				<div class="slider_visit"><h2>Сайт-визитка</h2><p>Отлично подойдет для представления вас, или вашего товара, широкой публике</p><div class="cirkle"><object type="image/svg+xml" data="img/Visited-Site.svg" class="logo"></object></div></div>
+
+					<div class="slider_corp">
+
+						<h2>Корпоративный сайт</h2>
+						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. </p>
+
+						<div class="cirkle">
+
+							<object type="image/svg+xml" data="img/Corp_site.svg" class="logo"></object>
+
+						</div>
+
+				</div>
+
+					<div class="slider_shop">
+					<h2>Интернет-магазин</h2>
+					<p>Сайт для осуществления торговой деятельности в интернете.</p>
+					<div class="cirkle">
+						<object type="image/svg+xml" data="img/Market.svg" class="logo"></object>
+					</div>
+
+				</div>
+			</div>
+
+			<div class="more_scroll"><h2>Еще больше вариантов</h2><div class="cirkle"><object type="image/svg+xml" data="img/arow.svg" class="logo"></object>
+			 
+
+			</div>
+
 			</div>
 		</div>
 	</div>
