Поставил на движок

--- a/SiteCore4/slider.html
+++ b/SiteCore4/slider.html
@@ -27,14 +27,14 @@ height:250px;
 
 <div class="slider">
 <ul class="slider_window">
-  <li class="slide">Сайт визитка</li>
-  <li class="slide">Корпаративный сайт</li>
-  <li class="slide">Интернет-Магазин</li>
+  <li class="slide">РЎР°Р№С‚ РІРёР·РёС‚РєР°</li>
+  <li class="slide">РљРѕСЂРїР°СЂР°С‚РёРІРЅС‹Р№ СЃР°Р№С‚</li>
+  <li class="slide">РРЅС‚РµСЂРЅРµС‚-РњР°РіР°Р·РёРЅ</li>
 </ul>
 <div class="slider_control">
-  <a data-slide-index="0" href="">Сайт визитка</a>
-  <a data-slide-index="1" href="">Корпаративный сайт</a>
-  <a data-slide-index="2" href="">Интернет-Магазин</a>
+  <a data-slide-index="0" href="">РЎР°Р№С‚ РІРёР·РёС‚РєР°</a>
+  <a data-slide-index="1" href="">РљРѕСЂРїР°СЂР°С‚РёРІРЅС‹Р№ СЃР°Р№С‚</a>
+  <a data-slide-index="2" href="">РРЅС‚РµСЂРЅРµС‚-РњР°РіР°Р·РёРЅ</a>
 </div>
 </div>
 <script>
