--- a/www/pages/home.html
+++ b/www/pages/home.html
@@ -1,12 +1,5 @@
-<div class="content"><h2>Lorem.</h2><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Similique iste, dolore cupiditate, expedita unde ratione, aliquid ex voluptas enim aperiam laboriosam voluptatum aliquam, possimus suscipit adipisci mollitia non totam veritatis!</p></div>
-
-<div class="content"><h2>Lorem.</h2><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Similique iste, dolore cupiditate, expedita unde ratione, aliquid ex voluptas enim aperiam laboriosam voluptatum aliquam, possimus suscipit adipisci mollitia non totam veritatis!</p></div>
-
-<div class="content last-content"><h2>Lorem.</h2><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Similique iste, dolore cupiditate, expedita unde ratione, aliquid ex voluptas enim aperiam laboriosam voluptatum aliquam, possimus suscipit adipisci mollitia non totam veritatis!</p></div>
-
-<div class="button-block clear-fix">
-	<div class="content-button"><a href="#">Подробнее</a></div>
-	<div class="content-button"><a href="#">Подробнее</a></div>
-	<div class="content-button"><a href="#">Подробнее</a></div>
+<div class="bg_main"></div>
+<h1>Студия вебдизайна</h1>
+<div class="hi-scriptor">
+	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dignissimos excepturi tempore iste, iusto sed sit delectus ratione laudantium</p>
 </div>
-{PAGE_TITLE}
