--- a/www/pages/services.html
+++ b/www/pages/services.html
@@ -1,43 +1,54 @@
-	<div class="price_content">
-	<div class="site_creation"><a href="">Создание сайта</a><div class="triangle_bottom"></div></div>
-		<div class="price_wrapp">
-			<div class="price_description">
-				<div class="price_cover"></div>
-				<h3>Отбеливание ануса</h3>
-				<p>Отбеливание ануса заключается в полном удалении всей растительности вокруг анального отверстия и полном очищении кожи в этом месте. С кожи удаляются все отмершие клетки, и осуществляется шлифовка эпидермиса.</p>
-				</div>
+<div class="content clear-fix">
+	<div class="slider">
+		<div class="slider_window">
 
-				<div class="price">
-					<div class="triangle"></div>
-					<a href="#">300р</a>
-				</div>
-		</div>	
-
-		<div class="price_wrapp">
-			<div class="price_description">
-				<div class="price_cover"></div>
-				<h3>Отбеливание ануса</h3>
-				<p>Отбеливание ануса заключается в полном удалении всей растительности вокруг анального отверстия и полном очищении кожи в этом месте. С кожи удаляются все отмершие клетки, и осуществляется шлифовка эпидермиса.</p>
-				</div>
-
-				<div class="price">
-					<div class="triangle"></div>
-					<a href="#">300р</a>
-				</div>
-		</div>
-
-
-		<div class="price_wrapp">
-			<div class="price_description">
-				<div class="price_cover"></div>
-				<h3>Отбеливание ануса</h3>
-				<p>Отбеливание ануса заключается в полном удалении всей растительности вокруг анального отверстия и полном очищении кожи в этом месте. С кожи удаляются все отмершие клетки, и осуществляется шлифовка эпидермиса.</p>
-				</div>
-
-				<div class="price">
-					<div class="triangle"></div>
-					<a href="#">300р</a>
-				</div>
-		</div>
+			<div class="slider_roll">
+				<div><p></p></div>
+				<div><p></p></div>
+				<div><p></p></div>
+				<div><p></p></div>
+			</div>
 
 		</div>
+		<div class="slider_control clear-fix">
+			<div class="slider_visit"><h2>Сайт-визитка</h2><p>Отлично подойдет для представления вас, или вашего товара, широкой публике</p><div class="cirkle"><object type="image/svg+xml" data="img/Visited-Site.svg" class="logo"></object></div></div>
+			<div class="slider_corp">
+				<h2>Корпоративный сайт</h2>
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. </p>
+
+				<div class="cirkle">
+
+					<object type="image/svg+xml" data="img/Corp_site.svg" class="logo"></object>
+
+				</div>
+
+			</div>
+
+			<div class="slider_shop">
+				<h2>Интернет-магазин</h2>
+				<p>Сайт для осуществления торговой деятельности в интернете.</p>
+				<div class="cirkle">
+					<object type="image/svg+xml" data="img/Market.svg" class="logo"></object>
+				</div>
+
+			</div>
+		</div>
+
+			<div class="more_scroll"><h2>Еще больше вариантов</h2><div class="cirkle"><object type="image/svg+xml" data="img/arow.svg" class="logo"></object>
+			 
+
+			</div>
+
+		</div>
+		<script>
+			$(document).ready(function(){
+				$('.slider_window').bxSlider({
+					pagerCustom: '.slider_control',
+					//slideWidth: 600,
+					infiniteLoop:false,
+					controls: false
+				});
+			});
+		</script>
+	</div>
+</div>
