--- a/www/parts/menu.html
+++ b/www/parts/menu.html
@@ -1,9 +1,7 @@
-<div class="center clear-fix">
-	<div class="logo"><a href="/"></a></div>
-	<ul class="nav">
-		<li><a href="/info">О нас</a></li>
-		<li><a href="/services">Услуги</a></li>
-		<li><a href="/portfolio">Работы</a></li>
-		<li><a href="/contacts">Контакты</a></li>
-	</ul>
-</div>
+<ul class="nav clear-fix">
+	<li class="gear_right"></li>
+	<li><a href="/portfolio">Портфолио</a></li>
+	<li><a href="/services">Услуги</a></li>
+	<li><a href="/contacts">Контакты</a></li>
+	<li class="gear_left"></li>
+</ul>
