--- a/www/pages/services.html
+++ b/www/pages/services.html
@@ -1,40 +1,45 @@
 <div class="content clear-fix">
-	<div class="slider">
-		<div class="slider_window">
 
-			<div class="slider_roll">
-				<div><p></p></div>
-				<div><p></p></div>
-				<div><p></p></div>
-				<div><p></p></div>
+		<div class="slider">
+
+		<ul class="slider_window">
+		  <li class="slide">Сайт визитка</li>
+		  <li class="slide">Корпаративный сайт</li>
+		  <li class="slide">Интернет-Магазин</li>
+		</ul>
+			<div class="slider_control clear-fix">
+			
+			  <a data-slide-index="0" href=""><div class="slider_visit"><h2>Сайт-визитка</h2><p>Отлично подойдет для представления вас, или вашего товара, широкой публике</p><div class="cirkle"><object type="image/svg+xml" data="img/Visited-Site.svg"></object></div></div></a>
+
+			  <a data-slide-index="1" href="">
+
+			  <div class="slider_corp">
+
+						<h2>Корпоративный сайт</h2>
+						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. </p>
+
+						<div class="cirkle">
+
+							<object type="image/svg+xml" data="img/Corp_site.svg"></object>
+
+						</div>
+
+				</div></a>
+
+			  <a data-slide-index="2" href=""><div class="slider_shop">
+					<h2>Интернет-магазин</h2>
+					<p>Сайт для осуществления торговой деятельности в интернете.</p>
+					<div class="cirkle">
+						<object type="image/svg+xml" data="img/Market.svg"></object>
+					</div>
+
+				</div></a>
 			</div>
+</div>
 
-		</div>
-		<div class="slider_control clear-fix">
-			<div class="slider_visit"><h2>Сайт-визитка</h2><p>Отлично подойдет для представления вас, или вашего товара, широкой публике</p><div class="cirkle"><object type="image/svg+xml" data="img/Visited-Site.svg" class="logo"></object></div></div>
-			<div class="slider_corp">
-				<h2>Корпоративный сайт</h2>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. </p>
 
-				<div class="cirkle">
 
-					<object type="image/svg+xml" data="img/Corp_site.svg" class="logo"></object>
-
-				</div>
-
-			</div>
-
-			<div class="slider_shop">
-				<h2>Интернет-магазин</h2>
-				<p>Сайт для осуществления торговой деятельности в интернете.</p>
-				<div class="cirkle">
-					<object type="image/svg+xml" data="img/Market.svg" class="logo"></object>
-				</div>
-
-			</div>
-		</div>
-
-			<div class="more_scroll"><h2>Еще больше вариантов</h2><div class="cirkle"><object type="image/svg+xml" data="img/arow.svg" class="logo"></object>
+			<div class="more_scroll"><h2>Еще больше вариантов</h2><div class="cirkle"><object type="image/svg+xml" data="img/arow.svg"></object>
 			 
 
 			</div>
