--- a/www/pages/services.html
+++ b/www/pages/services.html
@@ -1,59 +1,78 @@
 <div class="content clear-fix">
 
-		<div class="slider">
-
+	<div class="slider">
 		<ul class="slider_window">
-		  <li class="slide">Сайт визитка</li>
-		  <li class="slide">Корпаративный сайт</li>
-		  <li class="slide">Интернет-Магазин</li>
+		  <li class="slide">Сайт-Визитка отлично подойдет для описания небольшой компании, рекламы услуг или товара. Данное решение даст вам возможность компактного размещения информации о вашей компании, на 1-3 страницах.
+			Мы(Наши эксперты) грамотно разместим весь предоставленный Вами контент: логотип(готовый) и любую текстовую и графическую информацию. В услугу входит размещение сайта в сети интернет сроком на 1 год и регистрация в поисковых системах.</li>
+		  <li class="slide">Корпоративный сайт позволит вашей компании прочно укрепится в интернете и привлечь много новых клиентов. (Постоянно поддерживать связь с клиентами через систему новостей компании, организовывать работу сотрудников через корпоративные сервисы(корпоративная почта, бухгалтерия, базы данных клиентов, агентская программа))
+			<br>
+			(?)<b>Что вы получите:</b> до 15-ти страниц, фотогаллерею, слайдер переключения фотографий на главной странице.
+			Наши эксперты разместят ваше готовое лого и ваш текст с возможностью вставки фотографий. В услугу входит размещение сайта в сети интернет сроком на 1 год и регистрация в поисковых системах.</li>
+		  <li class="slide">
+		  Интернет магазин. Вы сможете организовать торговлю(вынести свою торговлю за пределы вашего города, управляя всем из вашего города?, не вставая с дивана?) на весь мир, безграничные возможности.<br>
+		  С интернет-магазином вы сможете торговать в виртуальном магазине.
+		  В Интернет-магазин включены все опции в рамках создания сайта для Бизнеса, подключенные платежные системы на выбор.<br>
+		  Функциональная система управления товарами, возможность создания множества категорий товаров, интуитивнопонятная система оформления и оплаты заказов на сайте, грамотное представление товаров на виртуальных витринах, удобная система обработки и(/или) управления заказами, комфортные сервисы обратной связи с клиентами.</li>
 		</ul>
-			<div class="slider_control clear-fix">
-			
-			  <a data-slide-index="0" href=""><div class="slider_visit"><h2>Сайт-визитка</h2><p>Отлично подойдет для представления вас, или вашего товара, широкой публике</p><div class="cirkle"><object type="image/svg+xml" data="img/Visited-Site.svg"></object></div></div></a>
+		<div class="slider_control clear-fix">
+		  <a data-slide-index="0" onclick="window.location.hash='visit';" href="">
+			<div class="slider_visit"><h2>Сайт-визитка</h2><p>Отлично подойдет для представления вас, или вашего товара, широкой публике</p>
+			<div class="cirkle">
+				<object type="image/svg+xml" data="img/Visited-Site.svg"></object>
+				</div></div>
+		  </a>
+		  <a data-slide-index="1" onclick="window.location.hash='corp';" href="">
 
-			  <a data-slide-index="1" href="">
-
-			  <div class="slider_corp">
-
-						<h2>Корпоративный сайт</h2>
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. </p>
-
-						<div class="cirkle">
-
-							<object type="image/svg+xml" data="img/Corp_site.svg"></object>
-
-						</div>
-
-				</div></a>
-
-			  <a data-slide-index="2" href=""><div class="slider_shop">
-					<h2>Интернет-магазин</h2>
-					<p>Сайт для осуществления торговой деятельности в интернете.</p>
-					<div class="cirkle">
-						<object type="image/svg+xml" data="img/Market.svg"></object>
-					</div>
-
-				</div></a>
+			<div class="slider_corp">
+				<h2>Корпоративный сайт</h2>
+				<p>Наиболее эффективное решение для продвижения вашей компании в интернете!</p>
+				<div class="cirkle">
+					<object type="image/svg+xml" data="img/Corp_site.svg"></object>
+				</div>
 			</div>
-</div>
-
-
-
-			<div class="more_scroll"><h2>Еще больше вариантов</h2><div class="cirkle"><object type="image/svg+xml" data="img/arow.svg"></object>
-			 
-
+		  </a>
+		  <a data-slide-index="2" onclick="window.location.hash='shop';"  href=""><div class="slider_shop">
+			<h2>Интернет-магазин</h2>
+			<p>Сайт для осуществления торговой деятельности в интернете.</p>
+			<div class="cirkle">
+				<object type="image/svg+xml" data="img/Market.svg"></object>
 			</div>
 
+			</div>
+		  </a>
 		</div>
+	</div>
+	<div class="more_scroll">
+		<h2>Еще больше вариантов</h2>
+		<div class="cirkle">
+			<object type="image/svg+xml" data="img/arow.svg"></object>
+		</div>
+	</div>
 		<script>
 			$(document).ready(function(){
-				$('.slider_window').bxSlider({
+				slider = $('.slider_window').bxSlider({
+					mode:'fade',
 					pagerCustom: '.slider_control',
 					//slideWidth: 600,
 					infiniteLoop:false,
 					controls: false
 				});
+					switch(window.location.hash){
+						case '#visit':
+							slider.goToSlide(0);
+							break;
+						case '#corp':
+							slider.goToSlide(1);
+							break;
+						case '#shop':
+							slider.goToSlide(2);
+							break;
+						 default:
+							window.location.hash='visit';
+
+					}
 			});
 		</script>
+		<button onclick="window.location.hash = 'something';">
 	</div>
 </div>
