--- a/www/pages/services.html
+++ b/www/pages/services.html
@@ -2,18 +2,27 @@
 
 	<div class="slider">
 		<ul class="slider_window">
-		  <li class="slide">Сайт-Визитка отлично подойдет для описания небольшой компании, рекламы услуг или товара. Данное решение даст вам возможность компактного размещения информации о вашей компании, на 1-3 страницах.
-			Мы(Наши эксперты) грамотно разместим весь предоставленный Вами контент: логотип(готовый) и любую текстовую и графическую информацию. В услугу входит размещение сайта в сети интернет сроком на 1 год и регистрация в поисковых системах.</li>
-		  <li class="slide">Корпоративный сайт позволит вашей компании прочно укрепится в интернете и привлечь много новых клиентов. (Постоянно поддерживать связь с клиентами через систему новостей компании, организовывать работу сотрудников через корпоративные сервисы(корпоративная почта, бухгалтерия, базы данных клиентов, агентская программа))
-			<br>
-			(?)<b>Что вы получите:</b> до 15-ти страниц, фотогаллерею, слайдер переключения фотографий на главной странице.
-			Наши эксперты разместят ваше готовое лого и ваш текст с возможностью вставки фотографий. В услугу входит размещение сайта в сети интернет сроком на 1 год и регистрация в поисковых системах.</li>
 		  <li class="slide">
-		  Интернет магазин. Вы сможете организовать торговлю(вынести свою торговлю за пределы вашего города, управляя всем из вашего города?, не вставая с дивана?) на весь мир, безграничные возможности.<br>
-		  С интернет-магазином вы сможете торговать в виртуальном магазине.
-		  В Интернет-магазин включены все опции в рамках создания сайта для Бизнеса, подключенные платежные системы на выбор.<br>
-		  Функциональная система управления товарами, возможность создания множества категорий товаров, интуитивнопонятная система оформления и оплаты заказов на сайте, грамотное представление товаров на виртуальных витринах, удобная система обработки и(/или) управления заказами, комфортные сервисы обратной связи с клиентами.</li>
+		  <h3> Данное решение даст вам возможность компактного размещения информации о вашей компании, на 1-3 страницах.</h3>
+			<p>Мы грамотно разместим весь предоставленный Вами контент: логотип, любую текстовую и графическую информацию.</p>
+			<p><span>В услугу входит:</span> размещение сайта в сети интернет сроком на 1 год и регистрация в поисковых системах.</p></li>
+		  <li class="slide"><h3>Корпоративный сайт позволит вашей компании прочно укрепится в интернете и привлечь много новых клиентов. Постоянно поддерживать с ними связь, а так же, организовывать работу сотрудников.</h3>
+		  <p>через корпоративные сервисы(корпоративная почта, бухгалтерия, базы данных клиентов, агентская программа</p>
+			<br>
+			<p><span>В услугу входит:</span> 
+			до 15-ти страниц сайта 
+			фотогаллерея, слайдер переключения фотографий на главной странице, 
+			размещение вашего текстового и графического контента 
+			размещение сайта в сети интернет сроком на 1 год и регистрация в поисковых системах.</p>
+			</li>
+		  <li class="slide">
+		  <h3>С интернет-магазином, Вы сможете организовать торговлю(вынести свою торговлю за пределы вашего города, управляя всем из вашего города?, не вставая с дивана?) на весь мир</h3>
+		  <p>С интернет-магазином вы сможете торговать в виртуальном пространстве.
+		  В Интернет-магазин включены все опции в рамках создания сайта для Бизнеса, подключенные платежные системы на выбор.</p>
+		  <p>
+		  Функциональная система управления товарами, возможность создания множества категорий товаров, интуитивнопонятная система оформления и оплаты заказов на сайте, грамотное представление товаров на виртуальных витринах, удобная система обработки и(/или) управления заказами, комфортные сервисы обратной связи с клиентами.</p></li>
 		</ul>
+
 		<div class="slider_control clear-fix">
 		  <a data-slide-index="0" onclick="window.location.hash='visit';" href="">
 			<div class="slider_visit"><h2>Сайт-визитка</h2><p>Отлично подойдет для представления вас, или вашего товара, широкой публике</p>
@@ -27,7 +36,7 @@
 				<h2>Корпоративный сайт</h2>
 				<p>Наиболее эффективное решение для продвижения вашей компании в интернете!</p>
 				<div class="cirkle">
-					<object type="image/svg+xml" data="img/Corp_site.svg"></object>
+					<object type="image/svg+xml" data="img/Corp_site.svg"><param name="wmode" value="opaque"></object>
 				</div>
 			</div>
 		  </a>
@@ -35,19 +44,20 @@
 			<h2>Интернет-магазин</h2>
 			<p>Сайт для осуществления торговой деятельности в интернете.</p>
 			<div class="cirkle">
-				<object type="image/svg+xml" data="img/Market.svg"></object>
+				<object type="image/svg+xml" data="img/Market.svg"><param name="wmode" value="opaque"></object>
 			</div>
 
 			</div>
 		  </a>
 		</div>
 	</div>
-	<div class="more_scroll">
+	
+	<a class="more_scroll" href="#">
 		<h2>Еще больше вариантов</h2>
-		<div class="cirkle">
-			<object type="image/svg+xml" data="img/arow.svg"></object>
+		<div class="cirkle" href="#">
+			<object type="image/svg+xml" data="img/arow.svg" href="#"><param name="wmode" value="opaque"></object>
 		</div>
-	</div>
+	</a>
 	<script>
 		$(document).ready(function(){
 			slider = $('.slider_window').bxSlider({
