--- a/www/pages/services.html
+++ b/www/pages/services.html
@@ -27,8 +27,9 @@
 		  <a data-slide-index="0" onclick="window.location.hash='visit';" href="">
 			<div class="slider_visit"><h2>Сайт-визитка</h2><p>Отлично подойдет для представления вас, или вашего товара, широкой публике</p>
 			<div class="cirkle">
-				<object type="image/svg+xml" data="img/Visited-Site.svg"></object>
-				</div></div>
+				<div class="visit"></div>
+				</div>
+				</div>
 		  </a>
 		  <a data-slide-index="1" onclick="window.location.hash='corp';" href="">
 
@@ -36,7 +37,9 @@
 				<h2>Корпоративный сайт</h2>
 				<p>Наиболее эффективное решение для продвижения вашей компании в интернете!</p>
 				<div class="cirkle">
-					<object type="image/svg+xml" data="img/Corp_site.svg"><param name="wmode" value="opaque"></object>
+					<svg viewBox="0 0 100 50">
+						<use xlink:href="/img/corp_site2.svg#Corp_site" /></use>
+						</svg>
 				</div>
 			</div>
 		  </a>
@@ -44,7 +47,7 @@
 			<h2>Интернет-магазин</h2>
 			<p>Сайт для осуществления торговой деятельности в интернете.</p>
 			<div class="cirkle">
-				<object type="image/svg+xml" data="img/Market.svg"><param name="wmode" value="opaque"></object>
+				<div class="shop"></div>
 			</div>
 
 			</div>
@@ -55,7 +58,7 @@
 	<a class="more_scroll" href="#">
 		<h2>Еще больше вариантов</h2>
 		<div class="cirkle" href="#">
-			<object type="image/svg+xml" data="img/arow.svg" href="#"><param name="wmode" value="opaque"></object>
+			<div class="arow"></div>
 		</div>
 	</a>
 	<script>
