удален лишний блок content

--- a/www/pages/services.html
+++ b/www/pages/services.html
@@ -1,89 +1,85 @@
-<div class="content clear-fix">
+<div class="slider">
+	<ul class="slider_window">
+	  <li class="slide">
+	  <h3> Данное решение даст вам возможность компактного размещения информации о вашей компании, на 1-3 страницах.</h3>
+		<p>Мы грамотно разместим весь предоставленный Вами контент: логотип, любую текстовую и графическую информацию.</p>
+		<p><span>В услугу входит:</span> размещение сайта в сети интернет сроком на 1 год и регистрация в поисковых системах.</p></li>
+	  <li class="slide"><h3>Корпоративный сайт позволит вашей компании прочно укрепится в интернете и привлечь много новых клиентов. Постоянно поддерживать с ними связь, а так же, организовывать работу сотрудников.</h3>
+	  <p>через корпоративные сервисы(корпоративная почта, бухгалтерия, базы данных клиентов, агентская программа</p>
+		<br>
+		<p><span>В услугу входит:</span> 
+		до 15-ти страниц сайта 
+		фотогаллерея, слайдер переключения фотографий на главной странице, 
+		размещение вашего текстового и графического контента 
+		размещение сайта в сети интернет сроком на 1 год и регистрация в поисковых системах.</p>
+		</li>
+	  <li class="slide">
+	  <h3>С интернет-магазином, Вы сможете организовать торговлю(вынести свою торговлю за пределы вашего города, управляя всем из вашего города?, не вставая с дивана?) на весь мир</h3>
+	  <p>С интернет-магазином вы сможете торговать в виртуальном пространстве.
+	  В Интернет-магазин включены все опции в рамках создания сайта для Бизнеса, подключенные платежные системы на выбор.</p>
+	  <p>
+	  Функциональная система управления товарами, возможность создания множества категорий товаров, интуитивнопонятная система оформления и оплаты заказов на сайте, грамотное представление товаров на виртуальных витринах, удобная система обработки и(/или) управления заказами, комфортные сервисы обратной связи с клиентами.</p></li>
+	</ul>
 
-	<div class="slider">
-		<ul class="slider_window">
-		  <li class="slide">
-		  <h3> Данное решение даст вам возможность компактного размещения информации о вашей компании, на 1-3 страницах.</h3>
-			<p>Мы грамотно разместим весь предоставленный Вами контент: логотип, любую текстовую и графическую информацию.</p>
-			<p><span>В услугу входит:</span> размещение сайта в сети интернет сроком на 1 год и регистрация в поисковых системах.</p></li>
-		  <li class="slide"><h3>Корпоративный сайт позволит вашей компании прочно укрепится в интернете и привлечь много новых клиентов. Постоянно поддерживать с ними связь, а так же, организовывать работу сотрудников.</h3>
-		  <p>через корпоративные сервисы(корпоративная почта, бухгалтерия, базы данных клиентов, агентская программа</p>
-			<br>
-			<p><span>В услугу входит:</span> 
-			до 15-ти страниц сайта 
-			фотогаллерея, слайдер переключения фотографий на главной странице, 
-			размещение вашего текстового и графического контента 
-			размещение сайта в сети интернет сроком на 1 год и регистрация в поисковых системах.</p>
-			</li>
-		  <li class="slide">
-		  <h3>С интернет-магазином, Вы сможете организовать торговлю(вынести свою торговлю за пределы вашего города, управляя всем из вашего города?, не вставая с дивана?) на весь мир</h3>
-		  <p>С интернет-магазином вы сможете торговать в виртуальном пространстве.
-		  В Интернет-магазин включены все опции в рамках создания сайта для Бизнеса, подключенные платежные системы на выбор.</p>
-		  <p>
-		  Функциональная система управления товарами, возможность создания множества категорий товаров, интуитивнопонятная система оформления и оплаты заказов на сайте, грамотное представление товаров на виртуальных витринах, удобная система обработки и(/или) управления заказами, комфортные сервисы обратной связи с клиентами.</p></li>
-		</ul>
+	<div class="slider_control clear-fix">
+	  <a data-slide-index="0" onclick="window.location.hash='visit';" href="">
+		<div class="slider_visit"><h2>Сайт-визитка</h2><p>Отлично подойдет для представления вас, или вашего товара, широкой публике</p>
+		<div class="cirkle">
+			<div class="visit"></div>
+			</div>
+			</div>
+	  </a>
+	  <a data-slide-index="1" onclick="window.location.hash='corp';" href="">
 
-		<div class="slider_control clear-fix">
-		  <a data-slide-index="0" onclick="window.location.hash='visit';" href="">
-			<div class="slider_visit"><h2>Сайт-визитка</h2><p>Отлично подойдет для представления вас, или вашего товара, широкой публике</p>
+		<div class="slider_corp">
+			<h2>Корпоративный сайт</h2>
+			<p>Наиболее эффективное решение для продвижения вашей компании в интернете!</p>
 			<div class="cirkle">
-				<div class="visit"></div>
-				</div>
-				</div>
-		  </a>
-		  <a data-slide-index="1" onclick="window.location.hash='corp';" href="">
-
-			<div class="slider_corp">
-				<h2>Корпоративный сайт</h2>
-				<p>Наиболее эффективное решение для продвижения вашей компании в интернете!</p>
-				<div class="cirkle">
-					<svg viewBox="0 0 100 50">
-						<use xlink:href="/img/corp_site2.svg#Corp_site" /></use>
-						</svg>
-				</div>
+				<svg viewBox="0 0 100 50">
+					<use xlink:href="/img/corp_site2.svg#Corp_site" ></use>
+					</svg>
 			</div>
-		  </a>
-		  <a data-slide-index="2" onclick="window.location.hash='shop';"  href=""><div class="slider_shop">
-			<h2>Интернет-магазин</h2>
-			<p>Сайт для осуществления торговой деятельности в интернете.</p>
-			<div class="cirkle">
-				<div class="shop"></div>
-			</div>
-
-			</div>
-		  </a>
 		</div>
-	</div>
-	
-	<a class="more_scroll" href="#">
-		<h2>Еще больше вариантов</h2>
-		<div class="cirkle" href="#">
-			<div class="arow"></div>
+	  </a>
+	  <a data-slide-index="2" onclick="window.location.hash='shop';"  href=""><div class="slider_shop">
+		<h2>Интернет-магазин</h2>
+		<p>Сайт для осуществления торговой деятельности в интернете.</p>
+		<div class="cirkle">
+			<div class="shop"></div>
 		</div>
-	</a>
-	<script>
-		$(document).ready(function(){
-			slider = $('.slider_window').bxSlider({
-				mode:'fade',
-				pagerCustom: '.slider_control',
-				//slideWidth: 600,
-				infiniteLoop:false,
-				controls: false
-			});
-			switch(window.location.hash){
-				case '#visit':
-					slider.goToSlide(0);
-					break;
-				case '#corp':
-					slider.goToSlide(1);
-					break;
-				case '#shop':
-					slider.goToSlide(2);
-					break;
-				 default:
-					window.location.hash='visit';
-			}
-		});
-	</script>
+
+		</div>
+	  </a>
 	</div>
 </div>
+
+<a class="more_scroll" href="#">
+	<h2>Еще больше вариантов</h2>
+	<div class="cirkle" href="#">
+		<div class="arow"></div>
+	</div>
+</a>
+<script>
+	$(document).ready(function(){
+		slider = $('.slider_window').bxSlider({
+			mode:'fade',
+			pagerCustom: '.slider_control',
+			//slideWidth: 600,
+			infiniteLoop:false,
+			controls: false
+		});
+		switch(window.location.hash){
+			case '#visit':
+				slider.goToSlide(0);
+				break;
+			case '#corp':
+				slider.goToSlide(1);
+				break;
+			case '#shop':
+				slider.goToSlide(2);
+				break;
+			 default:
+				window.location.hash='visit';
+		}
+	});
+</script>
