--- a/www/pages/services.html
+++ b/www/pages/services.html
@@ -24,8 +24,10 @@
 	<div class="slider_control clear-fix">
 	  <a data-slide-index="0" onclick="window.location.hash='visit';" href="">
 		<div class="slider_visit"><h2>Сайт-визитка</h2><p>Отлично подойдет для представления вас, или вашего товара, широкой публике</p>
-		<div class="cirkle">
-			<div class="visit"></div>
+		<div class="cirkle lower">
+			<svg viewBox="0 0 100 50">
+					<use xlink:href="/img/Visited-Site.svg#Visit_site" ></use>
+					</svg>
 			</div>
 			</div>
 	  </a>
@@ -45,7 +47,9 @@
 		<h2>Интернет-магазин</h2>
 		<p>Сайт для осуществления торговой деятельности в интернете.</p>
 		<div class="cirkle">
-			<div class="shop"></div>
+			<svg viewBox="0 0 100 50">
+					<use xlink:href="/img/Market.svg#Market_site" ></use>
+					</svg>
 		</div>
 
 		</div>
@@ -55,8 +59,10 @@
 
 <a class="more_scroll" href="#">
 	<h2>Еще больше вариантов</h2>
-	<div class="cirkle" href="#">
-		<div class="arow"></div>
+	<div class="cirkle lower2" href="#">
+		<svg viewBox="0 0 100 50">
+					<use xlink:href="/img/Arow.svg#Arow" ></use>
+					</svg>
 	</div>
 </a>
 <script>
