--- a/www/pages/portfolio.html
+++ b/www/pages/portfolio.html
@@ -1,6 +1,5 @@
 <script type="text/javascript" src="js/jquery.hover.js"></script>
-<div class="content">
-	<ul class="portfolio_block">
+<div class="container clear-fix">
 		<div class="thumbnail">
 <div class="description">
 	<div>
@@ -66,28 +65,6 @@
 		<div class="bottom_right_bort"></div>
 	</div>
 </div>
-</div><!--
-		--><div class="thumbnail">
-<div class="description">
-	<div>
-		<div class="top_left_bort"></div>
-		<h2>Cam-Net</h2>
-		<p>Сайт систем видео наблюдения.</p>
-		<div class="clear-fix"><a class="link" href=""></a><a class="look" href=""></a></div>
-		<div class="bottom_right_bort"></div>
-	</div>
 </div>
-</div><!--
-		--><div class="thumbnail">
-<div class="description">
-	<div>
-		<div class="top_left_bort"></div>
-		<h2>Cam-Net</h2>
-		<p>Сайт систем видео наблюдения.</p>
-		<div class="clear-fix"><a class="link" href=""></a><a class="look" href=""></a></div>
-		<div class="bottom_right_bort"></div>
-	</div>
-</div>
-</div>
-	</ul>
+		
 </div>
