--- a/www/pages/services.html
+++ b/www/pages/services.html
@@ -1,24 +1,17 @@
 <div class="slider">
 	<ul class="slider_window">
-	  <li class="slide">
+	  <li class="slide"><div class="middler">
 	  <h3> Данное решение даст вам возможность компактного размещения информации о вашей компании, на 1-3 страницах.</h3>
-		<p>Мы грамотно разместим весь предоставленный Вами контент: логотип, любую текстовую и графическую информацию.</p>
-		<p><span>В услугу входит:</span> размещение сайта в сети интернет сроком на 1 год и регистрация в поисковых системах.</p></li>
-	  <li class="slide"><h3>Корпоративный сайт позволит вашей компании прочно укрепится в интернете и привлечь много новых клиентов. Постоянно поддерживать с ними связь, а так же, организовывать работу сотрудников.</h3>
-	  <p>через корпоративные сервисы(корпоративная почта, бухгалтерия, базы данных клиентов, агентская программа</p>
-		<br>
-		<p><span>В услугу входит:</span> 
-		до 15-ти страниц сайта 
-		фотогаллерея, слайдер переключения фотографий на главной странице, 
-		размещение вашего текстового и графического контента 
-		размещение сайта в сети интернет сроком на 1 год и регистрация в поисковых системах.</p>
+		<p>Мы грамотно разместим весь предоставленный Вами контент: логотип, любую текстовую и графическую информацию.</p></div></li>
+	  <li class="slide"><div class="middler"><h3>Корпоративный сайт позволит вашей компании прочно укрепится в интернете и привлечь много новых клиентов. Постоянно поддерживать с ними связь, а так же, организовывать работу сотрудников.</h3>
+	  <p>через корпоративные сервисы(корпоративная почта, бухгалтерия, базы данных клиентов, агентская программа</p></div>
 		</li>
 	  <li class="slide">
+	  <div class="middler">
 	  <h3>С интернет-магазином, Вы сможете организовать торговлю(вынести свою торговлю за пределы вашего города, управляя всем из вашего города?, не вставая с дивана?) на весь мир</h3>
 	  <p>С интернет-магазином вы сможете торговать в виртуальном пространстве.
 	  В Интернет-магазин включены все опции в рамках создания сайта для Бизнеса, подключенные платежные системы на выбор.</p>
-	  <p>
-	  Функциональная система управления товарами, возможность создания множества категорий товаров, интуитивнопонятная система оформления и оплаты заказов на сайте, грамотное представление товаров на виртуальных витринах, удобная система обработки и(/или) управления заказами, комфортные сервисы обратной связи с клиентами.</p></li>
+	  </div></li>
 	</ul>
 
 	<div class="slider_control clear-fix">
@@ -65,6 +58,14 @@
 					</svg>
 	</div>
 </a>
+
+<div class="service_description clear-fix">
+	<div class="service_descript_icon"></div>
+</div>
+
+<div class="service_description clear-fix"></div>
+
+<div class="service_description clear-fix"></div>
 <script>
 	$(document).ready(function(){
 		slider = $('.slider_window').bxSlider({
