--- a/www/pages/services.html
+++ b/www/pages/services.html
@@ -1,8 +1,8 @@
 <div class="slider">
 	<ul class="slider_window">
 	  <li class="slide"><div class="middler">
-	  <h3> Данное решение даст вам возможность компактного размещения информации о вашей компании, на 1-3 страницах.</h3>
-		<p>Мы грамотно разместим весь предоставленный Вами контент: логотип, любую текстовую и графическую информацию.</p></div></li>
+	  <h3>Сайт-визитка </h3>
+		<p>Представляет посетителям информацию о вашей компании. Этот небольшой сайт, состоящий из 1 - 3 страниц, может познакомить клиента с вашими услугами, расценками и передать контактные данные. </p></div></li>
 	  <li class="slide"><div class="middler"><h3>Корпоративный сайт позволит вашей компании прочно укрепится в интернете и привлечь много новых клиентов. Постоянно поддерживать с ними связь, а так же, организовывать работу сотрудников.</h3>
 	  <p>через корпоративные сервисы(корпоративная почта, бухгалтерия, базы данных клиентов, агентская программа</p></div>
 		</li>
@@ -63,7 +63,9 @@
 	<div class="service_descript_icon"></div>
 </div>
 
-<div class="service_description clear-fix"></div>
+<div class="service_description clear-fix">
+
+</div>
 
 <div class="service_description clear-fix"></div>
 <script>
