--- a/www/pages/services.html
+++ b/www/pages/services.html
@@ -3,8 +3,8 @@
 	  <li class="slide"><div class="middler">
 	  <h3>Сайт-визитка </h3>
 		<p>Представляет посетителям информацию о вашей компании. Этот небольшой сайт, состоящий из 1 - 3 страниц, может познакомить клиента с вашими услугами, расценками и передать контактные данные. </p></div></li>
-	  <li class="slide"><div class="middler"><h3>Корпоративный сайт позволит вашей компании прочно укрепится в интернете и привлечь много новых клиентов. Постоянно поддерживать с ними связь, а так же, организовывать работу сотрудников.</h3>
-	  <p>через корпоративные сервисы(корпоративная почта, бухгалтерия, базы данных клиентов, агентская программа</p></div>
+	  <li class="slide"><div class="middler"><h3>Корпоративный сайт </h3>
+	  <p>Позволит вашей компании прочно укрепится в интернете и привлечь много новых клиентов. Постоянно поддерживать с ними связь, а так же, организовывать работу сотрудников. через корпоративные сервисы, такие как: корпоративная почта, бухгалтерия, базы данных клиентов, агентская программа</p></div>
 		</li>
 	  <li class="slide">
 	  <div class="middler">
