--- a/www/pages/services.html
+++ b/www/pages/services.html
@@ -8,9 +8,8 @@
 		</li>
 	  <li class="slide">
 	  <div class="middler">
-	  <h3>С интернет-магазином, Вы сможете организовать торговлю(вынести свою торговлю за пределы вашего города, управляя всем из вашего города?, не вставая с дивана?) на весь мир</h3>
-	  <p>С интернет-магазином вы сможете торговать в виртуальном пространстве.
-	  В Интернет-магазин включены все опции в рамках создания сайта для Бизнеса, подключенные платежные системы на выбор.</p>
+	  <h3>Интернет-магазин</h3>
+	  <p>Обеспечит Вас всем необходимым для успешной торговли в мировой паутине(?). Расширьте ваш бизнес за пределы города - на весь регион, всю страну или даже весь мир! Решать только вам.</p>
 	  </div></li>
 	</ul>
 
@@ -38,7 +37,7 @@
 	  </a>
 	  <a data-slide-index="2" onclick="window.location.hash='shop';"  href=""><div class="slider_shop">
 		<h2>Интернет-магазин</h2>
-		<p>Сайт для осуществления торговой деятельности в интернете.</p>
+		<p>Безграничные возможности для организации торговли в интернете.</p>
 		<div class="cirkle">
 			<svg viewBox="0 0 100 50">
 					<use xlink:href="/img/Market.svg#Market_site" ></use>
